<resources>
    <string name="app_name">FinBill</string>
    <string name="welcome" translatable="false">Welcome to FinBill</string>
    <string name="start" translatable="false">Start</string>
    <string name="set_name" translatable="false">What\'s your name?</string>
    <string name="set_name_hint" translatable="false">Type your name here</string>
    <string name="app_need" translatable="false">I need this app for…</string>
    <string name="next" translatable="false">Next</string>
    <string name="select_option" translatable="false">Select an option\…</string>
    <string name="finish" translatable="false">Finished!</string>
    <string name="finish_hint" translatable="false">You\'re all set up! Now you can start using FinBill!</string>
    <string name="let_me_in" translatable="false">Let me in!</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="settings_hint" translatable="false">Here you can change your settings</string>
    <string name="accounts" translatable="false">Accounts</string>
    <string name="categories" translatable="false">Categories</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="subscriptions" translatable="false">Subscriptions</string>
    <string name="backup" translatable="false">Backup and restore</string>
    <string name="fab" translatable="false">FAB</string>

    <string name="transactions" translatable="false">Transactions</string>
    <string name="expenses" translatable="false">Expenses</string>
    <string name="incomes" translatable="false">Incomes</string>
    <string name="transfers" translatable="false">Transfers</string>

    <string name="picture_placeholder" translatable="false">PICTURE</string>
    <string name="title_placeholder" translatable="false">TITLE</string>
    <string name="from_placeholder" translatable="false">FROM</string>
    <string name="date_placeholder" translatable="false">DATE</string>
    <string name="time_placeholder" translatable="false">TIME</string>
    <string name="to_placeholder" translatable="false">TO</string>
    <string name="sign_placeholder" translatable="false">SIGN</string>
    <string name="amount_placeholder" translatable="false">AMOUNT</string>
    <string name="currency_placeholder" translatable="false">CURRENCY</string>

    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>

    <string name="add_transaction" translatable="false">Add a new transaction</string>
    <string name="add_expense" translatable="false">Add a new expense</string>
    <string name="add_income" translatable="false">Add a new income</string>
    <string name="add_transfer" translatable="false">Add a new transfer</string>

    <string name="save" translatable="false">Save</string>
    <string name="transaction_type" translatable="false">Transaction type</string>
    <string name="name" translatable="false">Name</string>
    <string name="description" translatable="false">Description</string>
    <string name="amount" translatable="false">Amount</string>
    <string name="currency" translatable="false">Currency</string>
    <string name="date" translatable="false">Date</string>
    <string name="time" translatable="false">Time</string>
    <string name="frequency" translatable="false">Frequency</string>
    <string name="estimated_years" translatable="false">Estimated years</string>
    <string name="happens_every" translatable="false">It happens every…</string>
    <string name="notify" translatable="false">Notify</string>
    <string name="notify_every" translatable="false">Notify every…</string>
    <string name="notes" translatable="false">Notes</string>
    <string name="picture" translatable="false">Picture</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="choose_gallery" translatable="false">Choose from gallery</string>
    <string name="take_picture" translatable="false">Take a picture</string>
    <string name="location" translatable="false">Location</string>
    <string name="priority" translatable="false">Priority</string>
    <string name="choose_option" translatable="false">Choose an option…</string>
    <string name="from" translatable="false">From</string>
    <string name="to" translatable="false">To</string>
    <string name="choose_transaction_type" translatable="false">Choose a transaction type…</string>
    <string name="choose_account" translatable="false">Choose an account…</string>
    <string name="choose_category" translatable="false">Choose a category…</string>
    <string name="choose_currency" translatable="false">Choose a currency…</string>
    <string name="choose_frequency" translatable="false">Choose a frequency…</string>
    <string name="choose_recurrency" translatable="false">Choose a recurrency…</string>
    <string name="choose_priority" translatable="false">Choose a priority…</string>
    <string name="incomplete_fields" translatable="false">Error! You must complete all the mandatory fields before clicking the save button.</string>
    <string name="inserted_exchange_rates" translatable="false">Inserted exchange rates!</string>
    <string name="updated_exchange_rates" translatable="false">Updated exchange rates!</string>
    <string name="updating_exchange_rates" translatable="false">Updating exchange rates…</string>
    <string name="updating_currencies" translatable="false">Updating currencies…</string>
    <string name="updated_currencies" translatable="false">Updated currencies!</string>
    <string name="error_updating_exchange_rates" translatable="false">Error while updating exchange rates!</string>
    <string name="transaction_picture" translatable="false">Transaction picture</string>
    <string name="add_account" translatable="false">Add a new account</string>
    <string name="account_type" translatable="false">Account type</string>
    <string name="balance" translatable="false">Balance</string>
    <string name="platfond" translatable="false">Platfond</string>
    <string name="account_picture" translatable="false">Account picture</string>
    <string name="choose_account_type" translatable="false">Choose an account type…</string>
    <string name="category_type" translatable="false">Category type</string>
    <string name="choose_category_type" translatable="false">Choose a category type…</string>
    <string name="is_child_of" translatable="false">Is child of</string>
    <string name="choose_category_is_child_of" translatable="false">Choose a parent category…</string>
    <string name="no_one" translatable="false">No one</string>
    <string name="account_already_exists" translatable="false">Error! An account with the same name is already present in the database. Change it!</string>
    <string name="category_already_exists" translatable="false">Error! A category with the same name is already present in the database. Change it!</string>
    <string name="add_category" translatable="false">Add a new category</string>
    <string name="add_category_expense" translatable="false">Add a new expense category</string>
    <string name="add_category_income" translatable="false">Add a new income category</string>
    <string name="default_currency_option" translatable="false">What\'s your preferred currency?</string>
    <string name="cant_skip" translatable="false">You can\'t skip this setup!</string>
    <string name="type_placeholder" translatable="false">TYPE</string>
    <string name="date_of_opening" translatable="false">Date of opening</string>
    <string name="all_categories" translatable="false">All categories</string>
    <string name="expense_categories" translatable="false">Expense categories</string>
    <string name="income_categories" translatable="false">Income categories</string>
</resources>