<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.dialogs.AddTransactionDialog">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddTransaction"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/close_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/transactionTypeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type" />

            <Spinner
                android:id="@+id/transactionTypeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginBottom="8dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:id="@+id/transactionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fromTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/from" />

                <Spinner
                    android:id="@+id/fromEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/toTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to" />

                <Spinner
                    android:id="@+id/toEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginBottom="8dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:layout_marginBottom="8dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/amountEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/currencyTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/currency" />

                        <Spinner
                            android:id="@+id/currencyEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/time"
                        android:layout_weight="1">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/timeEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="time"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/frequencyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency" />

                <Spinner
                    android:id="@+id/frequencyEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/infoLastingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_years" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/infoLastingEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/estimated_years"
                        android:inputType="number"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck"
                        android:autofillHints="" />

                    <Button
                        android:id="@+id/plusButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:minHeight="48dp"
                        android:text="@string/plus"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/minusButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:minHeight="48dp"
                        android:text="@string/minus" />

                </LinearLayout>

                <TextView
                    android:id="@+id/infoRecurrentTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/happens_every" />

                <Spinner
                    android:id="@+id/infoRecurrentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:id="@+id/notifyLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/notifySwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notify"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:id="@+id/notifyTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_every" />

                    <Spinner
                        android:id="@+id/notifyEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:layout_marginBottom="8dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notesEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"/>
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/pictureTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/picture"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="12dp"
                        android:layout_marginEnd="8dp"
                        app:cardElevation="0dp">
                        <ImageView
                            android:id="@+id/pictureEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/transaction_picture"
                            />
                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:id="@+id/pictureButtonsLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        >

                        <Button
                            android:id="@+id/resetButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/reset" />

                        <Button
                            android:id="@+id/galleryButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_gallery" />

                        <Button
                            android:id="@+id/cameraButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/take_picture" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/priorityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority" />

                <Spinner
                    android:id="@+id/priorityEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>